fix[style]: navbar z-index

--- a/components/NavigationBar/NavigationBar.module.css
+++ b/components/NavigationBar/NavigationBar.module.css
@@ -7,6 +7,7 @@
   background-color: #f5f5f5;
   width: 100%;
   border: 1px solid #e6e6e6;
+  z-index: 1000;
 }
 
 .navBar__container {
